welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: ';' expected but ',' found.
		for(j <- 1 to y){c=c+1;ecritMessage(c),setPos(i,j)}
                                                      ^